make column ops return tables not series

--- a/examples/prompt_experiments_tutorial.ipynb
+++ b/examples/prompt_experiments_tutorial.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -22,6 +25,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,6 +38,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,6 +46,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -53,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -67,39 +73,15 @@
     "\n",
     "# if you are getting errors, comment this out and retry\n",
     "logger.remove()\n",
-    "TEMP_DIR = tempfile.gettempdir()"
+    "TEMP_DIR = tempfile.gettempdir()\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**This notebook uses the OpenAI API to generate text for prompts, make sure the env variable is populated.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# os.environ['OPENAI_API_KEY'] = \"...\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Let's first define our prompts and model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We have designed a prompt template to take in a question and a document and answer the question asked by the user."
    ]
   },
   {
@@ -110,15 +92,43 @@
    },
    "outputs": [],
    "source": [
+    "# os.environ['OPENAI_API_KEY'] = \"...\"\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Let's first define our prompts and model"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have designed a prompt template to take in a question and a document and answer the question asked by the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "prompt_base = \"\"\"\n",
     "    You are a {LLM_PERSONALITY}. Answer the following user query using the retrieved document:\n",
     "    {question}\n",
     "    The retrieved document titled \"{document_title}\" has the following text:\n",
     "    {document_text}\n",
-    "\"\"\""
+    "\"\"\"\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -126,6 +136,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -134,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -170,10 +181,11 @@
     "print(\n",
     "    \"prompt_developer: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"backend developer\")\n",
     ")\n",
-    "print(\"prompt_expert: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"python expert\"))"
+    "print(\"prompt_expert: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"python expert\"))\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -182,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -221,10 +233,11 @@
     "    pl.col([\"question\", \"document_title\", \"document_text\"])\n",
     ")\n",
     "print(\"Number of test cases: \", len(dataset))\n",
-    "print(\"Couple of samples: \", dataset[0:2])"
+    "print(\"Couple of samples: \", dataset[0:2])\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -232,6 +245,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -242,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -253,10 +267,11 @@
     "UPTRAIN_LOGS_DIR = os.path.join(TEMP_DIR, \"uptrain_prompt_experiments\")\n",
     "os.makedirs(UPTRAIN_LOGS_DIR, exist_ok=True)\n",
     "\n",
-    "UPTRAIN_SETTINGS = Settings(logs_folder=UPTRAIN_LOGS_DIR)"
+    "UPTRAIN_SETTINGS = Settings(logs_folder=UPTRAIN_LOGS_DIR)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -264,6 +279,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -272,27 +288,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "from uptrain.framework import Check, CheckSet\n",
-    "from uptrain.operators import PlotlyChart, RougeScore, SelectOp\n",
+    "from uptrain.operators import PlotlyChart, RougeScore\n",
     "\n",
     "hallucination_check = Check(\n",
     "    name=\"hallucination\",\n",
     "    sequence=[\n",
-    "        SelectOp(\n",
-    "            columns={\n",
-    "                \"overlap_score\": RougeScore(\n",
-    "                    col_in_generated=\"exp_generated\",\n",
-    "                    col_in_source=\"document_text\",\n",
-    "                    score_type=\"precision\",\n",
-    "                )\n",
-    "            }\n",
-    "        )\n",
+    "        RougeScore(\n",
+    "            col_in_generated=\"exp_generated\",\n",
+    "            col_in_source=\"document_text\",\n",
+    "            score_type=\"precision\",\n",
+    "            col_out=\"overlap_score\",\n",
+    "        ),\n",
     "    ],\n",
     "    plot=[\n",
     "        PlotlyChart.Histogram(\n",
@@ -300,10 +313,11 @@
     "        ),\n",
     "        PlotlyChart.Table(title=\"Hallucination scores\"),\n",
     "    ],\n",
-    ")"
+    ")\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -312,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -342,6 +356,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -350,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -359,15 +374,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████| 270/270 [00:27<00:00,  9.67it/s]\n"
+      "100%|██████████| 270/270 [00:26<00:00, 10.27it/s]\n"
      ]
     }
    ],
    "source": [
-    "check_set.setup(UPTRAIN_SETTINGS).run()"
+    "check_set.setup(UPTRAIN_SETTINGS).run()\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -376,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -385,10 +401,11 @@
     "from uptrain.dashboard import StreamlitRunner\n",
     "\n",
     "runner = StreamlitRunner(UPTRAIN_LOGS_DIR)\n",
-    "runner.start()"
+    "runner.start()\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -396,6 +413,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -417,6 +435,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
