--- a/examples/refactor/quality-monitoring.ipynb
+++ b/examples/refactor/quality-monitoring.ipynb
@@ -60,12 +60,12 @@
     "SCRATCH_SPACE = \"/tmp/uptrain-scratch/\"\n",
     "os.makedirs(SCRATCH_SPACE, exist_ok=True)\n",
     "UPTRAIN_LOGS_DIR = os.path.join(SCRATCH_SPACE, \"logs\")\n",
-    "# Uptrain primitives share configuration like openai rate limit, or the logs folder to write to through a single `Settings` object. \n",
+    "# Uptrain primitives share configuration like openai rate limit, or the logs folder to write to through a single `Settings` object.\n",
     "from uptrain.framework import Settings\n",
     "\n",
-    "# This notebook uses a ModelGrading evaluation by calling the OpenAI API, so the `OPENAI_API_KEY` env variable must be set or \n",
+    "# This notebook uses a ModelGrading evaluation by calling the OpenAI API, so the `OPENAI_API_KEY` env variable must be set or\n",
     "# the key specified in the `Settings` object.\n",
-    "UPTRAIN_SETTINGS = Settings(logs_folder=UPTRAIN_LOGS_DIR)"
+    "UPTRAIN_SETTINGS = Settings(logs_folder=UPTRAIN_LOGS_DIR)\n"
    ]
   },
   {
@@ -90,9 +90,10 @@
     "\n",
     "if not os.path.exists(dataset_path):\n",
     "    import httpx\n",
+    "\n",
     "    r = httpx.get(url)\n",
     "    with open(dataset_path, \"wb\") as f:\n",
-    "        f.write(r.content)"
+    "        f.write(r.content)\n"
    ]
   },
   {
@@ -101,11 +102,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_batch(batch_size = 20):\n",
+    "def read_batch(batch_size=20):\n",
     "    full_dataset = pl.read_ndjson(dataset_path)\n",
     "    total_rows = len(full_dataset)\n",
     "    for i in range(0, total_rows, batch_size):\n",
-    "        yield full_dataset.slice(i, i + batch_size)"
+    "        yield full_dataset.slice(i, i + batch_size)\n"
    ]
   },
   {
@@ -136,22 +137,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from uptrain.operators import SelectOp, CosineSimilarity\n",
-    "from uptrain.operators.language import RougeScore\n",
+    "from uptrain.operators import CosineSimilarity, RougeScore\n",
+    "from uptrain.framework import Check\n",
     "\n",
-    "check_op = SelectOp(\n",
-    "    columns={\n",
-    "        \"hallucination-score\": RougeScore(\n",
+    "check = Check(\n",
+    "    name=\"quality-monitoring\",\n",
+    "    sequence=[\n",
+    "        RougeScore(\n",
     "            score_type=\"precision\",\n",
-    "            col_in_generated=\"response\", \n",
-    "            col_in_source=\"document_text\"\n",
+    "            col_in_generated=\"response\",\n",
+    "            col_in_source=\"document_text\",\n",
+    "            col_out=\"hallucination-score\",\n",
     "        ),\n",
-    "        \"similarity-question-context\": CosineSimilarity(\n",
+    "        CosineSimilarity(\n",
     "            col_in_vector_1=\"question_embeddings\",\n",
     "            col_in_vector_2=\"context_embeddings\",\n",
+    "            col_out=\"similarity-question-context\",\n",
     "        ),\n",
-    "    }\n",
-    ")"
+    "    ],\n",
+    ")\n"
    ]
   },
   {
@@ -298,12 +302,11 @@
    "source": [
     "import plotly.express as px\n",
     "\n",
-    "check_op.setup(settings=UPTRAIN_SETTINGS)\n",
-    "\n",
+    "check.setup(settings=UPTRAIN_SETTINGS)\n",
     "all_outputs = []\n",
     "for batch in read_batch():\n",
-    "    out_df = check_op.run(batch)[\"output\"]\n",
-    "    all_outputs.append(out_df)"
+    "    out_df = check.run(batch)[\"output\"]\n",
+    "    all_outputs.append(out_df)\n"
    ]
   },
   {
@@ -1402,7 +1405,7 @@
     "import plotly.express as px\n",
     "\n",
     "out_df = pl.concat(all_outputs)\n",
-    "px.histogram(out_df.to_pandas(), x=\"hallucination-score\", nbins=10)"
+    "px.histogram(out_df.to_pandas(), x=\"hallucination-score\", nbins=10)\n"
    ]
   },
   {
