--- a/examples/validation_tutorial.ipynb
+++ b/examples/validation_tutorial.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -22,6 +25,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,6 +38,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,6 +46,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,6 +58,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,13 +72,15 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['OPENAI_API_KEY'] = \"...\"\n",
+    "\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
     "import openai\n",
     "import polars as pl\n",
-    "import json"
+    "import json\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,6 +88,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -113,6 +123,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -148,15 +159,19 @@
     "\n",
     "if not os.path.exists(dataset_path):\n",
     "    import httpx\n",
+    "\n",
     "    r = httpx.get(url)\n",
     "    with open(dataset_path, \"wb\") as f:\n",
     "        f.write(r.content)\n",
     "\n",
-    "dataset = pl.read_ndjson(dataset_path).select(pl.col(['question', 'document_title', 'document_text']))\n",
-    "print(dataset[0:2])"
+    "dataset = pl.read_ndjson(dataset_path).select(\n",
+    "    pl.col([\"question\", \"document_title\", \"document_text\"])\n",
+    ")\n",
+    "print(dataset[0:2])\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -173,15 +188,14 @@
     "def get_model_response(input_dictn):\n",
     "    prompt = [{\"role\": \"system\", \"content\": prompt_template.format(**input_dictn)}]\n",
     "    response = openai.ChatCompletion.create(\n",
-    "        model=\"gpt-3.5-turbo\",\n",
-    "        messages=prompt,\n",
-    "        temperature=0.1\n",
+    "        model=\"gpt-3.5-turbo\", messages=prompt, temperature=0.1\n",
     "    )\n",
-    "    message = response.choices[0]['message']['content']\n",
-    "    return message"
+    "    message = response.choices[0][\"message\"][\"content\"]\n",
+    "    return message\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -216,12 +230,40 @@
     }
    ],
    "source": [
-    "print(json.dumps({'input_question': dataset['question'][0], 'llm_response': get_model_response(dataset.to_dicts()[0])}, indent=1), \"\\n\")\n",
-    "print(json.dumps({'input_question': dataset['question'][1], 'llm_response': get_model_response(dataset.to_dicts()[1])}, indent=1), \"\\n\")\n",
-    "print(json.dumps({'input_question': dataset['question'][5], 'llm_response': get_model_response(dataset.to_dicts()[5])}, indent=1), \"\\n\")"
+    "print(\n",
+    "    json.dumps(\n",
+    "        {\n",
+    "            \"input_question\": dataset[\"question\"][0],\n",
+    "            \"llm_response\": get_model_response(dataset.to_dicts()[0]),\n",
+    "        },\n",
+    "        indent=1,\n",
+    "    ),\n",
+    "    \"\\n\",\n",
+    ")\n",
+    "print(\n",
+    "    json.dumps(\n",
+    "        {\n",
+    "            \"input_question\": dataset[\"question\"][1],\n",
+    "            \"llm_response\": get_model_response(dataset.to_dicts()[1]),\n",
+    "        },\n",
+    "        indent=1,\n",
+    "    ),\n",
+    "    \"\\n\",\n",
+    ")\n",
+    "print(\n",
+    "    json.dumps(\n",
+    "        {\n",
+    "            \"input_question\": dataset[\"question\"][5],\n",
+    "            \"llm_response\": get_model_response(dataset.to_dicts()[5]),\n",
+    "        },\n",
+    "        indent=1,\n",
+    "    ),\n",
+    "    \"\\n\",\n",
+    ")\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -229,6 +271,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -236,6 +279,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -249,30 +293,23 @@
    "outputs": [],
    "source": [
     "from uptrain.framework import Check, Signal\n",
-    "from uptrain.operators import (\n",
-    "    SelectOp,\n",
-    ")\n",
-    "from uptrain.operators.language import (\n",
-    "    TextComparison,\n",
-    ")\n",
+    "from uptrain.operators import TextComparison\n",
     "from validation_wrapper import ValidationManager\n",
     "\n",
     "check = Check(\n",
-    "        name=\"empty_response_validation\",\n",
-    "        sequence=[\n",
-    "            SelectOp(\n",
-    "                columns={\n",
-    "                    \"is_empty_response\": TextComparison(\n",
-    "                        reference_text=\"<EMPTY MESSAGE>\",\n",
-    "                        col_in_text=\"response\",\n",
-    "                    ),\n",
-    "                }\n",
-    "            )\n",
-    "        ],\n",
-    "    )\n"
+    "    name=\"empty_response_validation\",\n",
+    "    sequence=[\n",
+    "        TextComparison(\n",
+    "            reference_text=\"<EMPTY MESSAGE>\",\n",
+    "            col_in_text=\"response\",\n",
+    "            col_out=\"is_empty_response\",\n",
+    "        ),\n",
+    "    ],\n",
+    ")\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -286,10 +323,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pass_condition = ~Signal('is_empty_response')"
+    "pass_condition = ~Signal(\"is_empty_response\")\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -305,12 +343,13 @@
     "validation_manager = ValidationManager(\n",
     "    check=check,\n",
     "    completion_fn=get_model_response,\n",
-    "    pass_condition=~Signal('is_empty_response')\n",
+    "    pass_condition=~Signal(\"is_empty_response\"),\n",
     ")\n",
-    "validation_manager.setup()"
+    "validation_manager.setup()\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -363,7 +402,7 @@
    ],
    "source": [
     "for inputs in dataset.to_dicts():\n",
-    "    validated_response = validation_manager.run(inputs)"
+    "    validated_response = validation_manager.run(inputs)\n"
    ]
   }
  ],
