--- a/examples/openai_evals_tutorial.ipynb
+++ b/examples/openai_evals_tutorial.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,6 +32,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -36,6 +40,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,10 +65,11 @@
     "import polars as pl\n",
     "\n",
     "TEMP_DIR = tempfile.gettempdir()\n",
-    "UPTRAIN_LOGS_DIR = os.path.join(TEMP_DIR, \"uptrain_logs_openai_eval\")"
+    "UPTRAIN_LOGS_DIR = os.path.join(TEMP_DIR, \"uptrain_logs_openai_eval\")\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -78,10 +84,11 @@
    },
    "outputs": [],
    "source": [
-    "# os.environ['OPENAI_API_KEY'] = \"...\""
+    "# os.environ['OPENAI_API_KEY'] = \"...\"\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -90,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -129,10 +136,11 @@
     "    pl.col([\"question\", \"document_text\", \"answer\"])\n",
     ")\n",
     "print(\"Number of test cases: \", len(dataset))\n",
-    "print(\"Couple of samples: \", dataset[0:2])"
+    "print(\"Couple of samples: \", dataset[0:2])\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -140,6 +148,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -147,6 +156,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -161,74 +171,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "from uptrain.framework import Check, CheckSet, Settings\n",
-    "from uptrain.operators import PlotlyChart, SelectOp\n",
+    "from uptrain.operators import PlotlyChart\n",
     "from uptrain.operators.io import JsonReader\n",
     "from uptrain.operators.language import ModelGradeScore, OpenAIGradeScore\n",
     "\n",
     "check = Check(\n",
     "    name=\"Eval scores\",\n",
     "    sequence=[\n",
-    "        SelectOp(\n",
-    "            columns={\n",
-    "                ## Add your checks here\n",
-    "                # First is the openai grade eval - uses GPT-3.5-turbo\n",
-    "                \"openai_eval_score\": OpenAIGradeScore(\n",
-    "                    col_in_input=\"document_text\",\n",
-    "                    col_in_completion=\"answer\",\n",
-    "                    eval_name=\"coqa-closedqa-correct\",\n",
-    "                ),\n",
-    "                # Second is our custom grading eval - uses GPT-3.5-turbo\n",
-    "                \"custom_eval_score\": ModelGradeScore(\n",
-    "                    grading_prompt_template=\"\"\"\n",
-    "                    You are an evidence-driven LLM that places high importance on supporting facts and references. You diligently verify claims and check for evidence within the document to ensure answers rely on reliable information and align with the documented evidence.\",\n",
-    "                    \n",
-    "                    You are comparing an answer pulled from the document for a given question\n",
-    "                    Here is the data:\n",
-    "                    [BEGIN DATA]\n",
-    "                    ************\n",
-    "                    [Document]: {document}\n",
-    "                    ************\n",
-    "                    [Question]: {user_query}\n",
-    "                    ************\n",
-    "                    [Submitted answer]: {generated_answer}\n",
-    "                    ************\n",
-    "                    [END DATA]\n",
-    "                    \n",
-    "                    Compare the factual content of the submitted answer with the document as well as evaluate how well it answers the given question. Ignore any differences in style, grammar, or punctuation.\n",
-    "                    Answer the question by selecting one of the following options:\n",
-    "                    \n",
-    "                    (A) The submitted answer is a subset of the document and answers the question correctly.\n",
-    "                    (B) The submitted answer is a subset of the document but is not an appropriate answer for the question.\n",
-    "                    (C) The submitted quote is a superset of the document but is consistent with the document as well as answers the question correctly.\n",
-    "                    (D) The submitted quote is a superset of the document but is consistent with the document although it does not answer the question correctly.\n",
-    "                    (E) The submitted quote is a superset of the document and is not consistent with the document.\n",
-    "                    \"\"\",\n",
-    "                    eval_type=\"cot_classify\",\n",
-    "                    choice_strings=[\"A\", \"B\", \"C\", \"D\", \"E\"],\n",
-    "                    choice_scores={\"A\": 1.0, \"B\": 0.2, \"C\": 0.5, \"D\": 0.1, \"E\": 0.0},\n",
-    "                    context_vars={\n",
-    "                        \"document\": \"document_text\",\n",
-    "                        \"user_query\": \"question\",\n",
-    "                        \"generated_answer\": \"answer\",\n",
-    "                    },\n",
-    "                ),\n",
-    "            }\n",
-    "        )\n",
+    "        ## Add your checks here\n",
+    "        # First is the openai grade eval - uses GPT-3.5-turbo\n",
+    "        OpenAIGradeScore(\n",
+    "            col_in_input=\"document_text\",\n",
+    "            col_in_completion=\"answer\",\n",
+    "            eval_name=\"coqa-closedqa-correct\",\n",
+    "            col_out=\"openai_eval_score\",\n",
+    "        ),\n",
+    "        # Second is our custom grading eval - uses GPT-3.5-turbo\n",
+    "        ModelGradeScore(\n",
+    "            grading_prompt_template=\"\"\"\n",
+    "            You are an evidence-driven LLM that places high importance on supporting facts and references. You diligently verify claims and check for evidence within the document to ensure answers rely on reliable information and align with the documented evidence.\",\n",
+    "            \n",
+    "            You are comparing an answer pulled from the document for a given question\n",
+    "            Here is the data:\n",
+    "            [BEGIN DATA]\n",
+    "            ************\n",
+    "            [Document]: {document}\n",
+    "            ************\n",
+    "            [Question]: {user_query}\n",
+    "            ************\n",
+    "            [Submitted answer]: {generated_answer}\n",
+    "            ************\n",
+    "            [END DATA]\n",
+    "            \n",
+    "            Compare the factual content of the submitted answer with the document as well as evaluate how well it answers the given question. Ignore any differences in style, grammar, or punctuation.\n",
+    "            Answer the question by selecting one of the following options:\n",
+    "            \n",
+    "            (A) The submitted answer is a subset of the document and answers the question correctly.\n",
+    "            (B) The submitted answer is a subset of the document but is not an appropriate answer for the question.\n",
+    "            (C) The submitted quote is a superset of the document but is consistent with the document as well as answers the question correctly.\n",
+    "            (D) The submitted quote is a superset of the document but is consistent with the document although it does not answer the question correctly.\n",
+    "            (E) The submitted quote is a superset of the document and is not consistent with the document.\n",
+    "            \"\"\",\n",
+    "            eval_type=\"cot_classify\",\n",
+    "            choice_strings=[\"A\", \"B\", \"C\", \"D\", \"E\"],\n",
+    "            choice_scores={\"A\": 1.0, \"B\": 0.2, \"C\": 0.5, \"D\": 0.1, \"E\": 0.0},\n",
+    "            context_vars={\n",
+    "                \"document\": \"document_text\",\n",
+    "                \"user_query\": \"question\",\n",
+    "                \"generated_answer\": \"answer\",\n",
+    "            },\n",
+    "            col_out=\"custom_eval_score\",\n",
+    "        ),\n",
     "    ],\n",
     "    plot=[\n",
     "        PlotlyChart(kind=\"table\", title=\"Eval scores\"),\n",
     "    ],\n",
-    ")"
+    ")\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -247,10 +256,11 @@
     "    source=JsonReader(fpath=dataset_path),\n",
     "    checks=[check],\n",
     ")\n",
-    "settings = Settings(logs_folder=UPTRAIN_LOGS_DIR)"
+    "settings = Settings(logs_folder=UPTRAIN_LOGS_DIR)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -259,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -268,43 +278,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-07-03 19:15:32.969\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36muptrain.framework.base\u001b[0m:\u001b[36mrun\u001b[0m:\u001b[36m120\u001b[0m - \u001b[34m\u001b[1mExecuting node: sequence_0 for operator DAG: Eval scores\u001b[0m\n",
-      "100%|████████████████████████████████████████████████████████████████████| 90/90 [00:18<00:00,  4.74it/s]\n",
-      "\u001b[32m2023-07-03 19:15:52.339\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36muptrain.operators.language.llm\u001b[0m:\u001b[36mfetch_responses\u001b[0m:\u001b[36m97\u001b[0m - \u001b[33m\u001b[1mDetected Jupyter environment, scheduling requests in a separate thread.\u001b[0m\n",
-      " 96%|████████████████████████████████████████████████████████████████▉   | 86/90 [00:04<00:00, 12.83it/s]\u001b[32m2023-07-03 19:15:57.395\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36muptrain.operators.language.llm\u001b[0m:\u001b[36masync_process_payload\u001b[0m:\u001b[36m58\u001b[0m - \u001b[31m\u001b[1mError when sending request to openai API: Request timed out\u001b[0m\n",
-      "\u001b[32m2023-07-03 19:15:57.396\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36muptrain.operators.language.llm\u001b[0m:\u001b[36masync_process_payload\u001b[0m:\u001b[36m58\u001b[0m - \u001b[31m\u001b[1mError when sending request to openai API: Request timed out\u001b[0m\n",
-      "100%|████████████████████████████████████████████████████████████████████| 90/90 [00:11<00:00,  7.82it/s]\n",
-      "\u001b[32m2023-07-03 19:16:03.858\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36muptrain.operators.language.model_grade\u001b[0m:\u001b[36mrun\u001b[0m:\u001b[36m139\u001b[0m - \u001b[31m\u001b[1mError when processing payload at index 22: Request timed out\u001b[0m\n",
-      "\u001b[32m2023-07-03 19:16:03.859\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36muptrain.operators.language.model_grade\u001b[0m:\u001b[36mrun\u001b[0m:\u001b[36m139\u001b[0m - \u001b[31m\u001b[1mError when processing payload at index 60: Request timed out\u001b[0m\n"
+      "\u001b[32m2023-07-04 11:45:20.785\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36muptrain.framework.base\u001b[0m:\u001b[36mrun\u001b[0m:\u001b[36m119\u001b[0m - \u001b[34m\u001b[1mExecuting node: sequence_0 for operator DAG: Eval scores\u001b[0m\n"
      ]
-    }
-   ],
-   "source": [
-    "checkset.setup(settings).run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-07-01 22:33:37.511\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36muptrain.framework.base\u001b[0m:\u001b[36mrun\u001b[0m:\u001b[36m106\u001b[0m - \u001b[34m\u001b[1mExecuting node: sequence_0 for operator DAG: Eval scores\u001b[0m\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████| 90/90 [00:24<00:00,  3.67it/s]\n",
-      "\u001b[32m2023-07-01 22:34:02.186\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36muptrain.operators.language.llm\u001b[0m:\u001b[36mfetch_responses\u001b[0m:\u001b[36m97\u001b[0m - \u001b[33m\u001b[1mDetected Jupyter environment, scheduling requests in a separate thread.\u001b[0m\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████| 90/90 [00:04<00:00, 18.01it/s]\n",
-      "\u001b[32m2023-07-01 22:34:07.228\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.dashboard.st_setup\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m27\u001b[0m - \u001b[1mStreamlit launch command: streamlit run /Users/sourabhagrawal/Desktop/codes/llm/uptrain_experiments/uptrain_new/uptrain/uptrain/dashboard/st_run.py  --server.fileWatcherType none -- uptrain_logs_openai_eval\u001b[0m\n"
+      "100%|██████████| 90/90 [00:18<00:00,  4.85it/s]\n",
+      "\u001b[32m2023-07-04 11:45:39.775\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36muptrain.framework.base\u001b[0m:\u001b[36mrun\u001b[0m:\u001b[36m119\u001b[0m - \u001b[34m\u001b[1mExecuting node: sequence_1 for operator DAG: Eval scores\u001b[0m\n",
+      "\u001b[32m2023-07-04 11:45:39.782\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36muptrain.operators.language.llm\u001b[0m:\u001b[36mfetch_responses\u001b[0m:\u001b[36m97\u001b[0m - \u001b[33m\u001b[1mDetected Jupyter environment, scheduling requests in a separate thread.\u001b[0m\n",
+      "100%|██████████| 90/90 [00:03<00:00, 22.60it/s]\n"
      ]
     }
    ],
    "source": [
+    "checkset.setup(settings).run()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from uptrain.dashboard import StreamlitRunner\n",
     "\n",
     "runner = StreamlitRunner(UPTRAIN_LOGS_DIR)\n",
-    "runner.start()"
+    "runner.start()\n"
    ]
   },
   {
