--- a/examples/prompt_experiments_tutorial.ipynb
+++ b/examples/prompt_experiments_tutorial.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " **Why evaluate prompts**: LLM outputs are highly sensitive to the prompt provided. Trivial changes to the prompt such as assigning a personality to the LLM by prefixing the prompt with \"Imagine you are a CEO/Writer scientist etc.\", can generate widely different responses, thus impacting the overall application's performance. Hence, it becomes crucial to test multiple prompts over a wide variety of cases to find the one best suited for the application."
+    "**Why Evaluate Prompts**: LLM outputs are highly sensitive to the prompt provided. Trivial changes to the prompt such as assigning a personality to the LLM by prefixing the prompt with \"Imagine you are a CEO/Writer/Scientist etc.\" can generate widely different responses. This difference impacts the overall application's performance, making it crucial to test multiple prompts over cases to find the one best suited for the application."
    ]
   },
   {
@@ -30,11 +30,12 @@
    "metadata": {},
    "source": [
     "**Problem**: The workflow of our hypothetical Q&A application goes like,\n",
-    "- User enters a natural language query. \n",
-    "- The query is converted to an embedding, and relevant sections from the documentation are retrieved using nearest neighbor search. \n",
-    "- The original query along with the retrieved sections is passed to a language model (LM), along with a custom prompt to generate a response. \n",
+    "- The user enters a question. \n",
+    "- The question is converted to a vector encoding.\n",
+    "- Relevant sections from the documentation are retrieved using a vector database. \n",
+    "- The question and the retrieved sections are inserted into a custom prompt and passed to a language model (LM) to generate a response. \n",
     "\n",
-    "The goal is to find the best prompt which answers the user query. In the given tutorial, we consider a prompt template with LLM_PERSONALITY as a variable and using the experimentation framework to find the best personality to fill in."
+    "The goal is to find the best prompt which answers the user's question."
    ]
   },
   {
@@ -42,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Solution**: We demonstrate how to use the Uptrain framework to first obtain output responses for a test set of queries. We then evaluate the quality of the responses on some specified metrics."
+    "**Solution**: In the given tutorial, we consider a prompt template with LLM_PERSONALITY as a variable and use the experimentation framework to find the best personality to fill in. We demonstrate how to use the Uptrain framework to first obtain output responses for a test set of queries. We then evaluate the quality of the responses on some specified metrics."
    ]
   },
   {
@@ -71,9 +72,8 @@
     "import polars as pl\n",
     "from loguru import logger\n",
     "\n",
-    "# if you are getting errors, comment this out and retry\n",
-    "logger.remove()\n",
-    "TEMP_DIR = tempfile.gettempdir()\n"
+    "logger.remove() # if you are getting errors, comment this line out and retry\n",
+    "TEMP_DIR = tempfile.gettempdir()"
    ]
   },
   {
@@ -92,7 +92,7 @@
    },
    "outputs": [],
    "source": [
-    "# os.environ['OPENAI_API_KEY'] = \"...\"\n"
+    "# os.environ[\"OPENAI_API_KEY\"] = \"...\""
    ]
   },
   {
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we see from above prompt, we have an additional variable in our prompt called \"LLM_PERSONALITY\". We want to experiment with multiple personalities like **(\"bot\", \"backend developer\", \"python expert\")** and check which of the three gives the most appropriate response."
+    "As we see from the above prompt, we have an additional variable in our prompt called \"LLM_PERSONALITY\". We want to experiment with multiple personalities like **(\"bot\", \"backend developer\", \"python expert\")** and check which of the three gives the most appropriate response."
    ]
   },
   {
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just for clarity, let's see how these prompts look like:"
+    "Just for clarity, let's see what these prompts look like:"
    ]
   },
   {
@@ -159,7 +159,6 @@
       "    {question}\n",
       "    The retrieved document titled \"{document_title}\" has the following text:\n",
       "    {document_text}\n",
-      " \n",
       "\n",
       "prompt_developer:  \n",
       "    You are a backend developer. Answer the following user query using the retrieved document:\n",
@@ -177,11 +176,9 @@
     }
    ],
    "source": [
-    "print(\"prompt_bot: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"bot\"), \"\\n\")\n",
-    "print(\n",
-    "    \"prompt_developer: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"backend developer\")\n",
-    ")\n",
-    "print(\"prompt_expert: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"python expert\"))\n"
+    "print(\"prompt_bot: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"bot\"))\n",
+    "print(\"prompt_developer: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"backend developer\"))\n",
+    "print(\"prompt_expert: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"python expert\"))"
    ]
   },
   {
@@ -251,7 +248,7 @@
    "source": [
     "We start by configuring UpTrain to run our experiment. We will be using OpenAI's GPT-3.5-Turbo as our LLM. \n",
     "\n",
-    "Let's define an UpTrain 'Settings' object which has the directory location where we want to save the results of this experiment. Note that you must have `OPENAI_API_KEY` specified in your env variables or specify it explicitiy in the `Settings` object. "
+    "Let's define an UpTrain 'Settings' object which has the directory location where we want to save the results of this experiment. Note that you must have `OPENAI_API_KEY` specified in your env variables or specify it explicitly in the `Settings` object. "
    ]
   },
   {
@@ -283,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have multiple prompts, let's define our checks to compare which one performs best. As our prompt explicitly asks the LLM to answer the given question using sections from document text only, we are defining a hallucination check which uses (Rouge score)[https://en.wikipedia.org/wiki/ROUGE_(metric)] between the input document text and LLM response."
+    "Now that we have multiple prompts, let's define our checks to compare which one performs best. As our prompt explicitly asks the LLM to answer the given question using sections from document text only, we are defining a hallucination check which uses [Rouge score](https://en.wikipedia.org/wiki/ROUGE_(metric)) between the input document text and LLM response."
    ]
   },
   {
@@ -321,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To create multiple prompts from te same prompt template, UpTrain provides a PromptExperiment class where one can define their prompt template, multiple parameters to generate different prompt variations and the LLM model to be used. "
+    "To create multiple prompts from the same prompt template, UpTrain provides a PromptExperiment class where one can define their prompt template, multiple parameters to generate different prompt variations and the LLM model to be used. "
    ]
   },
   {
@@ -360,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we run the `CheckSet` and see which prompts performs best."
+    "Now we run the `CheckSet` and see which prompts perform best."
    ]
   },
   {
@@ -417,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We could some pivoting operations to see which of the experiments have highest overlap score. "
+    "UpTrain offers pivoting options for tables. Here, we use this to find out which of the three personalities has the highest overlap scores."
    ]
   },
   {
@@ -453,13 +450,6 @@
    "source": [
     "![prompt_experiment_plot.png](attachment:6c766044-7b50-4e19-a0c0-067390c2f13f.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -478,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
