--- a/examples/prompt_experiments_tutorial.ipynb
+++ b/examples/prompt_experiments_tutorial.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Problem**: The workflow of our hypothetical Q&A application goes like,\n",
+    "**Problem**: The workflow of our hypothetical Q&A application goes like this,\n",
     "- The user enters a question. \n",
     "- The question is converted to a vector encoding.\n",
     "- Relevant sections from the documentation are retrieved using a vector database. \n",
@@ -73,7 +73,7 @@
     "from loguru import logger\n",
     "\n",
     "logger.remove() # if you are getting errors, comment this line out and retry\n",
-    "TEMP_DIR = tempfile.gettempdir()"
+    "TEMP_DIR = tempfile.gettempdir()\n"
    ]
   },
   {
@@ -81,18 +81,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**This notebook uses the OpenAI API to generate text for prompts, make sure the env variable is populated.**"
+    "**This notebook uses the OpenAI API to generate text for prompts, make sure the env variable is populated with the API key.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# os.environ[\"OPENAI_API_KEY\"] = \"...\""
+    "# os.environ[\"OPENAI_API_KEY\"] = \"...\"\n"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "source": [
     "print(\"prompt_bot: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"bot\"))\n",
     "print(\"prompt_developer: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"backend developer\"))\n",
-    "print(\"prompt_expert: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"python expert\"))"
+    "print(\"prompt_expert: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"python expert\"))\n"
    ]
   },
   {
@@ -349,7 +349,7 @@
     "        ),\n",
     "    ],\n",
     "    checks=[hallucination_check],\n",
-    ")"
+    ")\n"
    ]
   },
   {
