--- a/docs/tutorials/openai-evals.mdx
+++ b/docs/tutorials/openai-evals.mdx
@@ -58,6 +58,8 @@ print("Number of test cases: ", len(dataset))
 print("Couple of samples: ", dataset[0:2])
 ```
 
+![sample_dataset.png](https://github.com/uptrain-ai/uptrain/assets/43818888/6081b07a-4dbb-449f-b9ed-97260a9c86d2)
+
 So, we have a bunch of questions, retrieved documents and final answers (i.e. LLM responses) for them. Let's evaluate the correctness of these answers using OpenAI evals.
 
 
@@ -156,4 +158,4 @@ runner = StreamlitRunner(UPTRAIN_LOGS_DIR)
 runner.start()
 ```
 
-![Screenshot 2023-07-01 at 10.27.50 PM.png](attachment:17237703-49f0-4024-a50d-8cf9bc37d5d6.png)
+![dashboard.png](https://github.com/uptrain-ai/uptrain/assets/43818888/806c64a8-e52f-4fc3-851e-35047032b778)
