--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -52,7 +52,7 @@ from uptrain.framework import Check
 
 response_analysis = Check(
     name="response_analysis"
-    sequence=[grammar_score, text_length],
+    operators=[grammar_score, text_length],
     plot=[Table()]
 )
 ```
