--- a/examples/openai_evals_tutorial.ipynb
+++ b/examples/openai_evals_tutorial.ipynb
@@ -189,7 +189,7 @@
     "\n",
     "check = Check(\n",
     "    name=\"Eval scores\",\n",
-    "    sequence=[\n",
+    "    operators=[\n",
     "        ## Add your checks here\n",
     "        # First is the openai grade eval - uses GPT-3.5-turbo\n",
     "        OpenAIGradeScore(\n",
