--- a/examples/prompt_experiments_tutorial.ipynb
+++ b/examples/prompt_experiments_tutorial.ipynb
@@ -296,7 +296,7 @@
     "\n",
     "hallucination_check = Check(\n",
     "    name=\"hallucination\",\n",
-    "    sequence=[\n",
+    "    operators=[\n",
     "        RougeScore(\n",
     "            col_in_generated=\"exp_generated\",\n",
     "            col_in_source=\"document_text\",\n",
@@ -468,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "vscode": {
    "interpreter": {
