--- a/examples/refactor/qna-logs-eval.ipynb
+++ b/examples/refactor/qna-logs-eval.ipynb
@@ -3296,11 +3296,11 @@
                 "from uptrain.operators import PlotlyChart\n",
                 "\n",
                 "list_checks = [\n",
-                "    Check(name=\"check_1\", sequence=[op_1], plot=[\n",
+                "    Check(name=\"check_1\", operators=[op_1], plot=[\n",
                 "        PlotlyChart.Histogram(x=\"hallucination-score\", nbins=20),\n",
                 "        PlotlyChart.Histogram(x=\"similarity-question-context\", nbins=20),\n",
                 "    ]),\n",
-                "    Check(name=\"check_2\", sequence=[op_2], plot=[\n",
+                "    Check(name=\"check_2\", operators=[op_2], plot=[\n",
                 "        PlotlyChart.Histogram(x=\"rogue_f1\", nbins=20),\n",
                 "    ])    \n",
                 "]\n",
@@ -3347,7 +3347,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "base",
+            "display_name": "Python 3",
             "language": "python",
             "name": "python3"
         },
@@ -3361,9 +3361,14 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.10"
+            "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
         },
-        "orig_nbformat": 4
+        "orig_nbformat": 4,
+        "vscode": {
+            "interpreter": {
+                "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+            }
+        }
     },
     "nbformat": 4,
     "nbformat_minor": 2
