--- a/examples/refactor/quality-monitoring.ipynb
+++ b/examples/refactor/quality-monitoring.ipynb
@@ -142,7 +142,7 @@
     "\n",
     "check = Check(\n",
     "    name=\"quality-monitoring\",\n",
-    "    sequence=[\n",
+    "    operators=[\n",
     "        RougeScore(\n",
     "            score_type=\"precision\",\n",
     "            col_in_generated=\"response\",\n",
@@ -1418,7 +1418,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1432,9 +1432,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
