--- a/examples/validation_tutorial.ipynb
+++ b/examples/validation_tutorial.ipynb
@@ -308,7 +308,7 @@
     "\n",
     "check = Check(\n",
     "    name=\"empty_response_validation\",\n",
-    "    sequence=[\n",
+    "    operators=[\n",
     "        TextComparison(\n",
     "            reference_text=\"<EMPTY MESSAGE>\",\n",
     "            col_in_text=\"response\",\n",
@@ -463,7 +463,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -477,7 +477,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
