--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -53,7 +53,7 @@ from uptrain.framework import Check
 response_analysis = Check(
     name="response_analysis"
     operators=[grammar_score, text_length],
-    plot=[Table()]
+    plots=[Table()]
 )
 ```
 
