--- a/docs/tutorials/openai-evals.mdx
+++ b/docs/tutorials/openai-evals.mdx
@@ -126,7 +126,7 @@ check = Check(
             col_out="custom_eval_score",
         ),
     ],
-    plot=[
+    plots=[
         PlotlyChart(kind="table", title="Eval scores"),
     ],
 )
