--- a/examples/openai_evals_tutorial.ipynb
+++ b/examples/openai_evals_tutorial.ipynb
@@ -235,7 +235,7 @@
     "            col_out=\"custom_eval_score\",\n",
     "        ),\n",
     "    ],\n",
-    "    plot=[\n",
+    "    plots=[\n",
     "        PlotlyChart(kind=\"table\", title=\"Eval scores\"),\n",
     "    ],\n",
     ")\n"
