--- a/examples/refactor/qna-logs-eval.ipynb
+++ b/examples/refactor/qna-logs-eval.ipynb
@@ -3296,11 +3296,11 @@
                 "from uptrain.operators import PlotlyChart\n",
                 "\n",
                 "list_checks = [\n",
-                "    Check(name=\"check_1\", operators=[op_1], plot=[\n",
+                "    Check(name=\"check_1\", operators=[op_1], plots=[\n",
                 "        PlotlyChart.Histogram(x=\"hallucination-score\", nbins=20),\n",
                 "        PlotlyChart.Histogram(x=\"similarity-question-context\", nbins=20),\n",
                 "    ]),\n",
-                "    Check(name=\"check_2\", operators=[op_2], plot=[\n",
+                "    Check(name=\"check_2\", operators=[op_2], plots=[\n",
                 "        PlotlyChart.Histogram(x=\"rogue_f1\", nbins=20),\n",
                 "    ])    \n",
                 "]\n",
