--- a/docs/tutorials/prompt-experiments.mdx
+++ b/docs/tutorials/prompt-experiments.mdx
@@ -129,7 +129,7 @@ hallucination_check = Check(
             col_out="overlap_score",
         ),
     ],
-    plot=[
+    plots=[
         PlotlyChart.Histogram(
             props=dict(x="overlap_score", nbins=20, color="exp_LLM_PERSONALITY")
         ),
