--- a/examples/prompt_experiments_tutorial.ipynb
+++ b/examples/prompt_experiments_tutorial.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -304,7 +304,7 @@
     "            col_out=\"overlap_score\",\n",
     "        ),\n",
     "    ],\n",
-    "    plot=[\n",
+    "    plots=[\n",
     "        PlotlyChart.Histogram(\n",
     "            props=dict(x=\"overlap_score\", nbins=20, color=\"exp_LLM_PERSONALITY\")\n",
     "        ),\n",
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -468,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
