--- a/examples/refactor/qna-logs-eval.ipynb
+++ b/examples/refactor/qna-logs-eval.ipynb
@@ -3340,7 +3340,7 @@
                 "\n",
                 "from uptrain.dashboard import StreamlitRunner\n",
                 "\n",
-                "runner = StreamlitRunner(LOGS_DIR)\n",
+                "runner = StreamlitRunner(UPTRAIN_LOGS_DIR)\n",
                 "runner.start()"
             ]
         }
