--- a/examples/refactor/qna-logs-eval.ipynb
+++ b/examples/refactor/qna-logs-eval.ipynb
@@ -3292,7 +3292,7 @@
             "outputs": [],
             "source": [
                 "from uptrain.framework import CheckSet, Check\n",
-                "from uptrain.operators.io import JsonReader\n",
+                "from uptrain.operators import JsonReader\n",
                 "from uptrain.operators import PlotlyChart\n",
                 "\n",
                 "list_checks = [\n",
@@ -3340,7 +3340,7 @@
                 "\n",
                 "from uptrain.dashboard import StreamlitRunner\n",
                 "\n",
-                "runner = StreamlitRunner(LOGS_DIR)\n",
+                "runner = StreamlitRunner(UPTRAIN_LOGS_DIR)\n",
                 "runner.start()"
             ]
         }
@@ -3361,7 +3361,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
+            "version": "3.10.10"
         },
         "orig_nbformat": 4,
         "vscode": {
