Update uptrain import

--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -3,14 +3,12 @@ title: "Quickstart"
 description: "Get started with UpTrain in a few simple steps"
 ---
 
-### Install the package 
-
-Using [full] will install the UpTrain package with all its dependencies
+## Install UpTrain with all dependencies
 
 ```bash
-pip install uptrain[full]
+pip install uptrain
+uptrain-add --feature full
 ```
-
 
 ### Define your requirement
 
