--- a/examples/prompt_experiments_tutorial.ipynb
+++ b/examples/prompt_experiments_tutorial.ipynb
@@ -51,10 +51,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install required packages\n",
+    "## Install UpTrain with all dependencies\n",
     "\n",
     "```bash\n",
-    "pip install uptrain[full] # Install UpTrain with all dependencies\n",
+    "pip install uptrain\n",
+    "uptrain-add --feature full\n",
     "```"
    ]
   },
