--- a/examples/openai_evals_tutorial.ipynb
+++ b/examples/openai_evals_tutorial.ipynb
@@ -42,10 +42,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install required packages\n",
+    "## Install UpTrain with all dependencies\n",
     "\n",
     "```bash\n",
-    "pip install uptrain[full] # Install UpTrain with all dependencies\n",
+    "pip install uptrain\n",
+    "uptrain-add --feature full\n",
     "```"
    ]
   },
@@ -345,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
