--- a/examples/validation_tutorial.ipynb
+++ b/examples/validation_tutorial.ipynb
@@ -44,10 +44,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install required packages\n",
+    "## Install UpTrain with all dependencies\n",
     "\n",
     "```bash\n",
-    "pip install uptrain[full]  # Install UpTrain with all dependencies\n",
+    "pip install uptrain\n",
+    "uptrain-add --feature full\n",
     "```"
    ]
   },
@@ -477,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
