--- a/examples/refactor/qna-logs-eval.ipynb
+++ b/examples/refactor/qna-logs-eval.ipynb
@@ -3292,16 +3292,15 @@
             "outputs": [],
             "source": [
                 "from uptrain.framework import CheckSet, Check\n",
-                "from uptrain.operators import JsonReader\n",
-                "from uptrain.operators import PlotlyChart\n",
+                "from uptrain.operators import JsonReader, Histogram\n",
                 "\n",
                 "list_checks = [\n",
                 "    Check(name=\"check_1\", operators=[op_1], plots=[\n",
-                "        PlotlyChart.Histogram(x=\"hallucination-score\", nbins=20),\n",
-                "        PlotlyChart.Histogram(x=\"similarity-question-context\", nbins=20),\n",
+                "        Histogram(x=\"hallucination-score\", nbins=20),\n",
+                "        Histogram(x=\"similarity-question-context\", nbins=20),\n",
                 "    ]),\n",
                 "    Check(name=\"check_2\", operators=[op_2], plots=[\n",
-                "        PlotlyChart.Histogram(x=\"rogue_f1\", nbins=20),\n",
+                "        Histogram(x=\"rogue_f1\", nbins=20),\n",
                 "    ])    \n",
                 "]\n",
                 "\n",
