Update attribute name in TextComparison objects

--- a/docs/tutorials/validation.mdx
+++ b/docs/tutorials/validation.mdx
@@ -157,7 +157,7 @@ check = Check(
     name="empty_response_validation",
     operators=[
         TextComparison(
-            reference_text="<EMPTY MESSAGE>",
+            reference_texts="<EMPTY MESSAGE>",
             col_in_text="response",
             col_out="is_empty_response",
         ),
