--- a/examples/validation_tutorial.ipynb
+++ b/examples/validation_tutorial.ipynb
@@ -311,7 +311,7 @@
     "    name=\"empty_response_validation\",\n",
     "    operators=[\n",
     "        TextComparison(\n",
-    "            reference_text=\"<EMPTY MESSAGE>\",\n",
+    "            reference_texts=\"<EMPTY MESSAGE>\",\n",
     "            col_in_text=\"response\",\n",
     "            col_out=\"is_empty_response\",\n",
     "        ),\n",
