--- a/examples/prompt_experiments_tutorial.ipynb
+++ b/examples/prompt_experiments_tutorial.ipynb
@@ -307,7 +307,9 @@
     "    ],\n",
     "    plots=[\n",
     "        Histogram(\n",
-    "            props=dict(x=\"overlap_score\", nbins=20, color=\"exp_LLM_PERSONALITY\")\n",
+    "            x=\"overlap_score\",\n",
+    "            nbins=20,\n",
+    "            color=\"exp_LLM_PERSONALITY\",\n",
     "        ),\n",
     "        Table(title=\"Hallucination scores\"),\n",
     "    ],\n",
