--- a/examples/prompt_experiments_tutorial.ipynb
+++ b/examples/prompt_experiments_tutorial.ipynb
@@ -293,7 +293,7 @@
    "outputs": [],
    "source": [
     "from uptrain.framework import Check, CheckSet\n",
-    "from uptrain.operators import PlotlyChart, RougeScore\n",
+    "from uptrain.operators import Histogram, Table, RougeScore\n",
     "\n",
     "hallucination_check = Check(\n",
     "    name=\"hallucination\",\n",
@@ -306,10 +306,12 @@
     "        ),\n",
     "    ],\n",
     "    plots=[\n",
-    "        PlotlyChart.Histogram(\n",
-    "            props=dict(x=\"overlap_score\", nbins=20, color=\"exp_LLM_PERSONALITY\")\n",
+    "        Histogram(\n",
+    "            x=\"overlap_score\",\n",
+    "            nbins=20,\n",
+    "            color=\"exp_LLM_PERSONALITY\",\n",
     "        ),\n",
-    "        PlotlyChart.Table(title=\"Hallucination scores\"),\n",
+    "        Table(title=\"Hallucination scores\"),\n",
     "    ],\n",
     ")\n"
    ]
