Add key components

--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -17,8 +17,8 @@ UpTrain is designed to be easy to use, and can be integrated into your existing 
     Get started with UpTrain in minutes
   </Card>
   <Card
-    title="Examples"
-    href="/examples/prompt-experiments"
+    title="Tutorials"
+    href="/tutorials/prompt-experiments"
     icon="cube"
     color="#0081eb"
   >
